# deep_orderbook

./: .gitignore  Dockerfile  README.md  coinbase_level2.py  dev_replay.ipynb  learn-100ms.ipynb  learn.ipynb  live.ipynb  pyproject.toml  pytest.ini  receive.ipynb  replay-tfdata.ipynb  replay.ipynb  replay_async.ipynb  requirements.in  requirements.txt  setup.py  test.sh  test_cache_performance.py  trained_model.pth
deep_orderbook/: __init__.py  cache_manager.py  config.py  datafeed.py  live_image.py  marketdata.py  readpolar.py  recorder.py  replay.py  replayer.py  shaper.py  shapper.py  strategy.py  test_learn.py  test_replayer.py  testasync.py  utils.py  visu.py
deep_orderbook/consumers/: recorder.py
deep_orderbook/feeds/: base_feed.py  coinbase_feed.py  coinbase_level2.py  recorder.py  test_coinbase.py
deep_orderbook/learn/: data_loader.py  tcn.py  test_learn.py  trainer.py
deep_orderbook/tests/: test_cache.py
learn/: tcn.py
sample_data/BTCUSDT/: 2020-11-01T09-00-00_snapshot.json  2020-11-01T09-00-00_trades.json  2020-11-01T10-00-00_snapshot.json  2020-11-01T10-00-00_trades.json
sample_data/ETHBTC/: 2020-11-01T09-00-00_snapshot.json  2020-11-01T09-00-00_trades.json  2020-11-01T09-00-00_update.json  2020-11-01T10-00-00_snapshot.json  2020-11-01T10-00-00_trades.json  2020-11-01T10-00-00_update.json
sample_data/ETHUSDT/: 2020-11-01T09-00-00_snapshot.json  2020-11-01T09-00-00_trades.json  2020-11-01T10-00-00_snapshot.json  2020-11-01T10-00-00_trades.json
tests/: test_receiver.py  test_recorder.py  test_replayer.py
